# wizstr

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh  gendoc.cpp  quality.cmake  xmake.lua
.gitee/: ISSUE_TEMPLATE.zh-CN.md
.xmake/windows/x64/cache/: config  detect  history  toolchain
cmake/: config.cmake.in  quality.cmake  str.cmake
doc/: .gitignore  example.txt  faq.md  gendoc.cpp  manual.md  reference-str.md  str.md
doc/logseq/: pages-metadata.edn
docs/: FAQ.html  MANUAL.html  MANUAL.md  cppreference.css
examples/: CMakeLists.txt  example1.cpp
include/: .gitignore  str.h  str.hpp  tmpl.h  view.h  view.hpp
include/tiny/: asserts.h  buf.h  bytes.h  chars.h  escape.h  path.h  re.h  segment.h  str.h  tmpl.h  unescape.h
logseq/: pages-metadata.edn
noused/: bytes.cpp  core.cpp  core.h  str.cpp  str.hpp  test_bytes.cpp  test_str.cpp
src/: bytes.cpp  chars.cpp  core.cpp  core.h  re.cpp  src.cmake  str.cpp  unescape.cpp  view.cpp
src/tiny/: chars.cpp  str.cpp
templates/: .gitignore  CMakeLists.txt  FAQ.md  MANUAL.html  MANUAL.html.md  MANUAL.md  README.en.md  README.md  cppreference.css  example.txt  example1  example1.cpp  gendoc  gendoc-test-bcode.md  gendoc-test-bformula.md  gendoc-test-chapter3.md  gendoc-test-emphasis2.md  gendoc-test-emphasis4.md  gendoc-test-hlink.md  gendoc-test-list.md  gendoc-test-param.md  gendoc-test-ref.md  gendoc-test-return.md  gendoc.cpp  gendoc.h  gendoc.sh  gendoc_test.html  gendoc_test.md  gendoc_test_001.md  gendoc_test_002.md  gendoc_test_004.md
templates/docs/: FAQ.html  MANUAL.html
templates/gendoc/: CMakeLists.txt
templates/gendoc/src/: gendoc.cpp
templates/gendoc/tests/: gendoc-test-emphasis3.md  gendoc-test-section.md  gendoc_test.md
test/: main.cpp  test-compares.h  test-compares.hpp  test-gernial.txt  test-to_consumer.hpp  test-to_proc.hpp  test-utils.hpp  test.cmake  test.cpp  test_bytes.cpp  test_main.cpp  test_re.cpp  test_str.cpp  test_str_after_space.cpp  test_str_align_center.cpp  test_str_align_center_inplace.cpp  test_str_align_left.cpp  test_str_align_left_inplace.cpp  test_str_align_right.cpp  test_str_align_right_inplace.cpp  test_str_align_xxx.cpp  test_str_align_zfill.cpp  test_str_align_zfill_inplace.cpp  test_str_append.cpp  test_str_append_inplace.cpp  test_str_append_insert_remove.cpp  test_str_base16.cpp  test_str_base16_inplace.cpp  test_str_base64.cpp  test_str_capitalize.cpp  test_str_case_xxx.cpp  test_str_chunked.cpp  test_str_chunked_View.cpp  test_str_chunked_view.cpp  test_str_contains.cpp  test_str_contains_count.cpp  test_str_count.cpp  test_str_count_lines.cpp  test_str_count_words.cpp  test_str_cover.cpp  (+301 more)
test/data/: test-512.txt  test-gernial.txt
tests/: CMakeLists.txt  test-utils.hpp  test_str_accept.cpp  test_str_accept_until.cpp  test_str_after_space.cpp  test_str_align_center.cpp  test_str_align_center_inplace.cpp  test_str_align_left.cpp  test_str_align_left_inplace.cpp  test_str_align_right.cpp  test_str_align_right_inplace.cpp  test_str_align_zfill.cpp  test_str_align_zfill_inplace.cpp  test_str_all_demos.cpp  test_str_all_from_customers.cpp  test_str_append.cpp  test_str_append_inplace.cpp  test_str_chunked.cpp  test_str_chunked_view.cpp  test_str_contains.cpp  test_str_count.cpp  test_str_count_lines.cpp  test_str_count_words.cpp  test_str_cover.cpp  test_str_cover_inplace.cpp  test_str_decode_base16.cpp  test_str_decode_base16_inplace.cpp  test_str_decode_base64.cpp  test_str_decode_base64_inplace.cpp  test_str_decode_cstr.cpp  test_str_decode_cstr_inplace.cpp  test_str_dirname.cpp  test_str_dirname_basename.cpp  test_str_dirname_inplace.cpp  test_str_dirname_pos.cpp  test_str_dirname_ptr.cpp  test_str_dirname_range.cpp  test_str_dirname_view.cpp  test_str_drop.cpp  test_str_drop_inplace.cpp  (+199 more)
tests/data/: test-1024.txt  test-1024x3.txt  test-510.txt  test-511.txt  test-513.txt
tools/: CMakeLists.txt  gendoc.cpp
tools/gendoc/: CMakeLists.txt
tools/gendoc/include/: gendoc.h
tools/gendoc/src/: gendoc.cpp
tools/gendoc/tests/: gendoc-test-chapter1.md  gendoc-test-iformula.md  gendoc-test-image.md  gendoc-test-list.html  gendoc-test-paragraph.md  gendoc-test-param.html  gendoc-test-param.md  gendoc-test-separator.html  gendoc-test-separator.md  gendoc_test.html  gendoc_test.md
